feat: Ajuste retorno de dados nas rotas game
